perfect center text and overflow text fix

--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,15 @@ body{
     font-family: 'Cormorant Infant', serif;    
 }
 
+// MIXIN
+@mixin transform($X,$Y){
+	-webkit-transform:translate($X,$Y);
+	-ms-transform:translate($X,$Y);
+	-o-transform:translate($X,$Y);
+	-moz-transform:translate($X,$Y);
+    transform:translate($X,$Y);
+}
+
 // COLOR
 
 
@@ -50,6 +59,42 @@ body{
 
 .left{
     padding: 30px;
+    .imgfinder-area{
+        margin-bottom: 15px;
+        label{
+            margin-right: 10px;
+        }
+        input{
+            color:transparent;
+        }
+    }
+    .flyerview{
+        position: relative;
+        max-width: 100%;
+        height: auto;
+        img{
+            width: 100%;
+            height: auto;
+        }
+        .textplace{
+            position: absolute;
+            width: 70%;
+            height: 60%;
+            top: 50%;
+            left: 50%;
+            @include transform(-50%,-50%);
+            overflow: hidden;
+            .flyertext{
+                width: 100%;
+                height: 100%;
+                font-size: 2.5rem;
+                text-transform: uppercase;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+    }
 }
 
 .right{
@@ -57,14 +102,17 @@ body{
     padding: 30px;
     .flyername{
         margin-bottom: 30px;
-        .flyertext{
-            width: 350px;
-            height: 45px;
+        .flyerinput{
+            width: 100%;
+            min-height: 45px;
             font-size: 2.5rem;
         }
     }
     .flyerstyle{
         margin-bottom: 30px;
+        h4{
+            margin-bottom: 15px;
+        }
         ul{
             padding: 0;
             margin: 0;
@@ -77,7 +125,7 @@ body{
                 text-align: center;
                 background: #565350;
                 cursor: pointer;
-                border:1px solid transparent;
+                border:1px solid #565350;
                 &:hover,&:focus{
                     border-color: #07d4d4;
                 }
